--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Home/Index.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Home/Index.cshtml
@@ -106,7 +106,7 @@
                                 </div>
 
                                 <div id="Image-load_item">
-                                    <label asp-for="ImageFile" class="control-label"></label>
+                                    <label class="control-label">Bild</label>
                                     <input asp-for="ImageFile" class="btn btn-success" accept="image/*" />
                                     <span asp-validation-for="ImageFile" class="text-danger"></span>
                                     @Html.ValidationMessageFor(m => m.ImageFile, "", new { @class = "error" })
@@ -115,7 +115,7 @@
                                 <div id="loadServerItem" style="display:none">
                                     <div class="input-group mb-3">
                                         <input type="text" class="form-control" name="Server_render" readonly id="loadItem" aria-describedby="button-addon2">
-                                        <button class="btn btn-outline-secondary" data-bs-toggle="modal" data-bs-target="#AllServerImage" type="button" id="button-addon2">Load</button>
+                                        <button class="btn btn-outline-secondary" data-bs-toggle="modal" data-bs-target="#AllServerImage" type="button" id="button-addon2">Laden</button>
                                     </div>
                                 </div>
 
@@ -127,6 +127,10 @@
                                                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Закрыть"></button>
                                             </div>
                                             <div class="modal-body">
+                                                <div class="input-group mb-3">
+                                                    <input type="text" class="form-control" id="SearchItem" aria-describedby="button-addon2">
+                                                    <button class="btn btn-outline-secondary" onclick="findImg()" type="button" id="serch">Bilde finden</button>
+                                                </div>
                                                 <div style="display:grid;grid-template-columns:repeat(2,auto)">
                                                     @foreach (var imageName in ViewBag.ServerImages)
                                                     {
@@ -140,7 +144,7 @@
 
                                             </div>
                                             <div class="modal-footer">
-                                                <button type="button" class="btn btn-primary" onclick="ChoiseImage()" data-bs-dismiss="modal">Load</button>
+                                                <button type="button" class="btn btn-primary" onclick="ChoiseImage()" data-bs-dismiss="modal">Laden</button>
                                                 <button type="button" class="btn danger" data-bs-dismiss="modal">Schließen</button>
                                             </div>
                                         </div>
@@ -194,12 +198,12 @@
                                 </div>
 
                             <div>
-                                <h5>Firmenname</h5>
+                              <h5>Hersteller</h5>
                                 <input asp-for="companyName" value="@ViewBag.Dopple.companyName" required class="form-control" type="text" />
                             </div>
 
                             <div>
-                                <h5>Name System</h5>
+                                <h5>System</h5>
                                
                                 <select asp-for="NameSystem" onchange="systemSwitch(event.target.value)" required id="DoppelSys" class="form-select">
 
@@ -273,7 +277,7 @@
                                 <div id="Aussen_innen_klein" class="shadow-lg p-3 mb-5 bg-body-tertiary rounded">
 
                                     <div>
-                                        <h5>Für zylinder aussen klein</h5>
+                                        <h5>Kleine Größen</h5>
                                     </div>
                                     @if (ViewBag.KleinAussen != null)
                                     {
@@ -327,7 +331,7 @@
                                         }
                                     }
 
-                                    <button type="button" onclick="newKlein()" class="btn danger">Create New Size</button>
+                                    <button type="button" onclick="newKlein()" class="btn danger">Neue Größe erstellen</button>
                                 </div>
                                 <div id="productOptions">
 
@@ -350,7 +354,7 @@
                                 </div>
 
                                 <div  id="Image-load_item">
-                                    <label asp-for="ImageFile" class="control-label"></label>
+                                    <label class="control-label">Bild</label>
                                     <input asp-for="ImageFile" class="btn btn-success" accept="image/*" />
                                     <span asp-validation-for="ImageFile" class="text-danger"></span>
                                     @Html.ValidationMessageFor(m => m.ImageFile, "", new { @class = "error" })
@@ -359,7 +363,7 @@
                                 <div id="loadServerItem" style="display:none">
                                     <div class="input-group mb-3">
                                         <input type="text" class="form-control" name="Server_render" readonly id="loadItem" aria-describedby="button-addon2">
-                                        <button class="btn btn-outline-secondary" data-bs-toggle="modal" data-bs-target="#AllServerImage" type="button" id="button-addon2">Load</button>
+                                        <button class="btn btn-outline-secondary" data-bs-toggle="modal" data-bs-target="#AllServerImage" type="button" id="button-addon2">Laden</button>
                                     </div>
                                 </div>
 
@@ -371,6 +375,10 @@
                                                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Закрыть"></button>
                                             </div>
                                             <div class="modal-body">
+                                                <div class="input-group mb-3">
+                                                    <input type="text" class="form-control" id="SearchItem" aria-describedby="button-addon2">
+                                                    <button class="btn btn-outline-secondary" onclick="findImg()" type="button" id="serch">Bilde finden</button>
+                                                </div>
                                                 <div style="display:grid;grid-template-columns:repeat(2,auto)">
                                                     @foreach (var imageName in ViewBag.ServerImages)
                                                     {
@@ -384,7 +392,7 @@
 
                                             </div>
                                             <div class="modal-footer">
-                                                <button type="button" class="btn btn-primary" onclick="ChoiseImage()" data-bs-dismiss="modal">Load</button>
+                                                <button type="button" class="btn btn-primary" onclick="ChoiseImage()" data-bs-dismiss="modal">Laden</button>
                                                 <button type="button" class="btn danger" data-bs-dismiss="modal">Schließen</button>
                                             </div>
                                         </div>
@@ -417,12 +425,12 @@
                                 </div>
 
                                 <div>
-                                    <h5>Firmenname</h5>
+                                    <h5>Hersteller</h5>
                                     <input asp-for="companyName" required class="form-control" type="text" />
                                 </div>
 
                                 <div>
-                                    <h5>Name System</h5>
+                                    <h5>System</h5>
                                     <input asp-for="NameSystem" onchange="systemSwitch(event.target.value)" id="DoppelSys" required class="form-control" type="text" />
                                 </div>
 
@@ -440,7 +448,7 @@
                                 </div>
 
                                     <div>
-                                    <h5>Price</h5>
+                                    <h5>Preis</h5>
                                         <input asp-for="Price" required class="form-control" />
                                     </div>
 
@@ -467,10 +475,10 @@
                                 <div id="Aussen_innen_klein" class="shadow-lg p-3 mb-5 bg-body-tertiary rounded">
 
                                     <div>
-                                        <h5>Für zylinder aussen klein</h5>
+                                        <h5>Kleine Größen</h5>
                                     </div>
-                                   
-                                    <button type="button" onclick="newKlein()" class="btn danger">Create New Size</button>
+
+                                    <button type="button" onclick="newKlein()" class="btn danger">Neue Größe erstellen</button>
                                 </div>
 
                                 <div id="productOptions">
@@ -554,6 +562,28 @@
     <script type="text/javascript">
 
         let countKleinBlock = 1;
+
+        function findImg() {
+            let allServerImg = document.querySelectorAll("#ChoiseItem");
+            let SearchItem = document.getElementById("SearchItem");
+            let find = SearchItem.value;
+
+            allServerImg.forEach((item) => {
+
+                let valueItem = item.children[1].alt;
+                if (valueItem.includes(find)) {
+                    item.style.display = "grid";
+                }
+                else {
+                    item.style.display = "none";
+                }
+
+                if (find == "") {
+                    item.style.display = "grid";
+                }
+
+            });
+        }
 
         function newKlein() {
 
