--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Home/Profil_KnaufzylinderRout.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Home/Profil_KnaufzylinderRout.cshtml
@@ -114,7 +114,7 @@
                                 </div>
 
                                 <div id="Image-load_item">
-                                    <label asp-for="ImageFile" class="control-label"></label>
+                                    <label class="control-label">Bild</label>
                                     <input asp-for="ImageFile" class="btn btn-success" accept="image/*" />
                                     <span asp-validation-for="ImageFile" class="text-danger"></span>
                                     @Html.ValidationMessageFor(m => m.ImageFile, "", new { @class = "error" })
@@ -123,7 +123,7 @@
                                 <div id="loadServerItem" style="display:none">
                                     <div class="input-group mb-3">
                                         <input type="text" class="form-control" name="Server_render" readonly id="loadItem" aria-describedby="button-addon2">
-                                        <button class="btn btn-outline-secondary" data-bs-toggle="modal" data-bs-target="#AllServerImage" type="button" id="button-addon2">Load</button>
+                                        <button class="btn btn-outline-secondary" data-bs-toggle="modal" data-bs-target="#AllServerImage" type="button" id="button-addon2">Laden</button>
                                     </div>
                                 </div>
 
@@ -135,6 +135,10 @@
                                                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Закрыть"></button>
                                             </div>
                                             <div class="modal-body">
+                                                <div class="input-group mb-3">
+                                                    <input type="text" class="form-control" id="SearchItem" aria-describedby="button-addon2">
+                                                    <button class="btn btn-outline-secondary" onclick="findImg()" type="button" id="serch">Bilde finden</button>
+                                                </div>
                                                 <div style="display:grid;grid-template-columns:repeat(2,auto)">
                                                     @foreach (var imageName in ViewBag.ServerImages)
                                                     {
@@ -148,7 +152,7 @@
 
                                             </div>
                                             <div class="modal-footer">
-                                                <button type="button" class="btn btn-primary" onclick="ChoiseImage()" data-bs-dismiss="modal">Load</button>
+                                                <button type="button" class="btn btn-primary" onclick="ChoiseImage()" data-bs-dismiss="modal">Laden</button>
                                                 <button type="button" class="btn danger" data-bs-dismiss="modal">Schließen</button>
                                             </div>
                                         </div>
@@ -204,12 +208,12 @@
                                 </div>
 
                             <div>
-                                <h5>Firmenname</h5>
+                                    <h5>Hersteller</h5>
                                 <input asp-for="companyName" value="@ViewBag.Knayf.companyName" required class="form-control" type="text" />
                             </div>
 
                             <div>
-                                <h5>Name System</h5>
+                                <h5>System</h5>
                                 <select asp-for="NameSystem" required id="DoppelSys" class="form-select">
 
                                     @foreach (var list in ViewBag.System)
@@ -232,7 +236,7 @@
                             </div>
 
                             <div>
-                                <h5>Price</h5>
+                                    <h5>Preis</h5>
                                 <input asp-for="Price" value="@ViewBag.Knayf.Price" required class="form-control" />
                             </div>
 
@@ -283,7 +287,7 @@
                                 <div id="Aussen_innen_klein" class="shadow-lg p-3 mb-5 bg-body-tertiary rounded">
 
                                     <div>
-                                        <h5>Für zylinder aussen klein</h5>
+                                        <h5>Kleine Größen</h5>
                                     </div>
                                     @if (ViewBag.KleinAussen != null)
                                     {
@@ -337,7 +341,7 @@
                                         }
                                     }
 
-                                    <button type="button" onclick="newKlein()" class="btn danger">Create New Size</button>
+                                    <button type="button" onclick="newKlein()" class="btn danger">Neue Größe erstellen</button>
                                 </div>
                              
                             <div id="productOptions">
@@ -359,7 +363,7 @@
                             </div>
 
                             <div id="Image-load_item">
-                                <label asp-for="ImageFile" class="control-label"></label>
+                                <label class="control-label">Bild</label>
                                 <input asp-for="ImageFile" class="btn btn-success" accept="image/*" />
                                 <span asp-validation-for="ImageFile" class="text-danger"></span>
                                 @Html.ValidationMessageFor(m => m.ImageFile, "", new { @class = "error" })
@@ -368,7 +372,7 @@
                             <div id="loadServerItem" style="display:none">
                                 <div class="input-group mb-3">
                                     <input type="text" class="form-control" name="Server_render" readonly id="loadItem" aria-describedby="button-addon2">
-                                    <button class="btn btn-outline-secondary" data-bs-toggle="modal" data-bs-target="#AllServerImage" type="button" id="button-addon2">Load</button>
+                                        <button class="btn btn-outline-secondary" data-bs-toggle="modal" data-bs-target="#AllServerImage" type="button" id="button-addon2">Laden</button>
                                 </div>
                             </div>
 
@@ -380,6 +384,10 @@
                                             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Закрыть"></button>
                                         </div>
                                         <div class="modal-body">
+                                                <div class="input-group mb-3">
+                                                    <input type="text" class="form-control" id="SearchItem" aria-describedby="button-addon2">
+                                                    <button class="btn btn-outline-secondary" onclick="findImg()" type="button" id="serch">Bilde finden</button>
+                                                </div>
                                             <div style="display:grid;grid-template-columns:repeat(2,auto)">
                                                 @foreach (var imageName in ViewBag.ServerImages)
                                                 {
@@ -393,7 +401,7 @@
 
                                         </div>
                                         <div class="modal-footer">
-                                            <button type="button" class="btn btn-primary" onclick="ChoiseImage()" data-bs-dismiss="modal">Load</button>
+                                                <button type="button" class="btn btn-primary" onclick="ChoiseImage()" data-bs-dismiss="modal">Laden</button>
                                             <button type="button" class="btn danger" data-bs-dismiss="modal">Schließen</button>
                                         </div>
                                     </div>
@@ -426,12 +434,12 @@
                             </div>
 
                             <div style="margin-bottom: 50px;">
-                                <label>Firmenname</label>
+                               <label>Hersteller</label>
                                 <input asp-for="companyName" required class="form-control" type="text" />
                             </div>
 
                             <div style="margin-bottom: 50px;">
-                                <label>Name System</label>
+                                <label>System</label>
                                 <input asp-for="NameSystem" id="DoppelSys" required class="form-control" type="text" />
                             </div>
 
@@ -442,7 +450,7 @@
 
 
                             <div style="margin-bottom: 50px;">
-                                <label>Price</label>
+                                    <label>Preis</label>
                                 <input asp-for="Price" required class="form-control" />
                             </div>
 
@@ -468,10 +476,10 @@
                                 <div id="Aussen_innen_klein" class="shadow-lg p-3 mb-5 bg-body-tertiary rounded">
 
                                     <div>
-                                        <h5>Für zylinder aussen klein</h5>
+                                        <h5>Kleine Größen</h5>
                                     </div>
 
-                                    <button type="button" onclick="newKlein()" class="btn danger">Create New Size</button>
+                                    <button type="button" onclick="newKlein()" class="btn danger">Neue Größe erstellen</button>
                                 </div>
 
                             <div id="productOptions">
@@ -572,6 +580,28 @@
                     console.log(item.childNodes[3].alt);
                     serverImg.value = item.childNodes[3].alt;
                 }
+            });
+        }
+
+        function findImg() {
+            let allServerImg = document.querySelectorAll("#ChoiseItem"); // Используем класс вместо ID
+            let SearchItem = document.getElementById("SearchItem");
+            let find = SearchItem.value;
+
+            allServerImg.forEach((item) => {
+
+                let valueItem = item.children[1].alt;
+                if (valueItem.includes(find)) {
+                    item.style.display = "grid";
+                }
+                else {
+                    item.style.display = "none";
+                }
+
+                if (find == "") {
+                    item.style.display = "grid";
+                }
+
             });
         }
 
